feat: Добавить запрос PATCH /mails/{mail}
