# routes/api.php
@@ -16,4 +16,5 @@ use Illuminate\Support\Facades\Route;
 
 Route::get('/mails', [MailController::class, 'index']);
 Route::post('/mails', [MailController::class, 'store']);
+Route::patch('/mails/{mail}', [MailController::class, 'update']);
 Route::post('/mails/consume', [MailController::class, 'consume']);
